# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: github-actions.yml
page_analyzer/: app.py  database.py  models.py
page_analyzer/templates/: checks.html  index.html  url.html  url_detail.html  urls.html
